--- a/zzLib_800-documents/050-sorting/100-draft/190-numbering/190-numbering_presentation.html
+++ b/zzLib_800-documents/050-sorting/100-draft/190-numbering/190-numbering_presentation.html
@@ -1,3 +1,4 @@
+# <html style="size: letter;"><br \><script type="text/javascript"> document.body.innerHTML = ''; </script> <!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 #!/usr/bin/env bash
 
 # Dependencies.
@@ -115,13 +116,300 @@ _document_main() {
 #b
 # NOTICE: DOCUMENT
 #__HEADER_uk4uPhB663kVcygT0q_HEADER__
-_heading1 'Numbering'
+ '_heading1' 'Numbering'
+if false; then true; # -->
+<!-- # --><h1>Numbering</h1>
+<!--
+fi
+ '_heading2' 'Components'
+if false; then true; # -->
+<!-- # --><h2>Components</h2>
+<!--
+fi
+ '_v' '"_lib	- software, records, etc, typically uniquely needed by specific CAD model
 
-_heading2 'Components'
-_v "$fromSelfFolder_components"
+00[00]-RESERVED (do NOT use)
 
-_heading2 'Functions'
-_v "$fromSelfFolder_functions"
+
+01[00]-Bundle
+	0110-Frames
+	0150-Actuators
+	0151[z]-Thruster/Driver
+		Components only used for these?
+		Screws used within these?
+	0160-Tools
+		Nozzle
+		Hot-End
+		Cold-End
+		Extension (Bowden Tube)
+	0162-Supplementary
+		Filament Storage
+	0165-Slab (workpiece mounting surface)
+	0170-Tray (surface to mount electronics and similar)
+	0172-Rack (enclosure for electronics and similar, and/or junction box)
+	0175-Cabinet (arbitrary storage)
+
+
+
+11[00]-Structural (Passive, Cut To Size)
+	1110[z]-Extrusions/Timbers
+		_resized
+	1112[z]-Sheets/Panels/Plates (for frames only)
+		_rescaled (PreDrilled only)
+	1115-Backing (Table)
+
+
+
+30[00]-Conveyance
+	3030[z]-Shaft/Piston
+	3032-LeadScrew
+	3033[z]-Belts
+	3035- to 3038- RESERVED (do NOT use)
+
+35[00]-Couplings (including flexible, u-joints, etc)
+	3530-LeadScrew_to_Motor
+
+
+
+50[00]-Effectors
+	5050[z]-Motors/Steppers/Servos
+	5051[z]-RotaryBearings/RotaryShims
+	
+	5052[z]-NutBlocks/PlatesEffectors/BracketsEffectors (typically belt tie-down points), etc.
+	5053-RESERVED
+	
+	5054[z]-Guides (Wheels/Bushings/LinearBearings)
+	
+	5055-Pulleys
+	5056-Gears
+	
+	5058-Limit Switch
+
+55[00]-RESERVED (do NOT use)
+	
+
+(6000 RESERVED)
+
+(7000 RESERVED)
+
+
+
+80[00]-Endpoints
+	8080-Plug
+		RJ45
+		misc
+	8081-Jack
+		RJ45
+		misc
+	8082-RESERVED (do NOT use)
+	8083-RESERVED (do NOT use)
+
+85[00]-Dissipator
+	8580-Fans
+	8581-Pump
+	8582-Heatsink
+	8585-Radiator
+
+9000-Miscellaneous
+	9090z-Screws/Bolts
+	9095-frequent (most frequently used)
+	9099-Misc
+		zMisc (unsortred, typically uniquely needed by specific CAD model)
+
+9100-KEEPOUT (solid objects used to mark regions reserved for future use)
+
+94[00]
+to
+98[00]
+	RESERVED for future use
+
+99[00]-import
+	RESERVED for future use"'
+if false; then true; # -->
+<!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+<!-- # -->_lib	- software, records, etc, typically uniquely needed by specific CAD model
+<!-- # -->
+<!-- # -->00[00]-RESERVED (do NOT use)
+<!-- # -->
+<!-- # -->
+<!-- # -->01[00]-Bundle
+<!-- # -->	0110-Frames
+<!-- # -->	0150-Actuators
+<!-- # -->	0151[z]-Thruster/Driver
+<!-- # -->		Components only used for these?
+<!-- # -->		Screws used within these?
+<!-- # -->	0160-Tools
+<!-- # -->		Nozzle
+<!-- # -->		Hot-End
+<!-- # -->		Cold-End
+<!-- # -->		Extension (Bowden Tube)
+<!-- # -->	0162-Supplementary
+<!-- # -->		Filament Storage
+<!-- # -->	0165-Slab (workpiece mounting surface)
+<!-- # -->	0170-Tray (surface to mount electronics and similar)
+<!-- # -->	0172-Rack (enclosure for electronics and similar, and/or junction box)
+<!-- # -->	0175-Cabinet (arbitrary storage)
+<!-- # -->
+<!-- # -->
+<!-- # -->
+<!-- # -->11[00]-Structural (Passive, Cut To Size)
+<!-- # -->	1110[z]-Extrusions/Timbers
+<!-- # -->		_resized
+<!-- # -->	1112[z]-Sheets/Panels/Plates (for frames only)
+<!-- # -->		_rescaled (PreDrilled only)
+<!-- # -->	1115-Backing (Table)
+<!-- # -->
+<!-- # -->
+<!-- # -->
+<!-- # -->30[00]-Conveyance
+<!-- # -->	3030[z]-Shaft/Piston
+<!-- # -->	3032-LeadScrew
+<!-- # -->	3033[z]-Belts
+<!-- # -->	3035- to 3038- RESERVED (do NOT use)
+<!-- # -->
+<!-- # -->35[00]-Couplings (including flexible, u-joints, etc)
+<!-- # -->	3530-LeadScrew_to_Motor
+<!-- # -->
+<!-- # -->
+<!-- # -->
+<!-- # -->50[00]-Effectors
+<!-- # -->	5050[z]-Motors/Steppers/Servos
+<!-- # -->	5051[z]-RotaryBearings/RotaryShims
+<!-- # -->	
+<!-- # -->	5052[z]-NutBlocks/PlatesEffectors/BracketsEffectors (typically belt tie-down points), etc.
+<!-- # -->	5053-RESERVED
+<!-- # -->	
+<!-- # -->	5054[z]-Guides (Wheels/Bushings/LinearBearings)
+<!-- # -->	
+<!-- # -->	5055-Pulleys
+<!-- # -->	5056-Gears
+<!-- # -->	
+<!-- # -->	5058-Limit Switch
+<!-- # -->
+<!-- # -->55[00]-RESERVED (do NOT use)
+<!-- # -->	
+<!-- # -->
+<!-- # -->(6000 RESERVED)
+<!-- # -->
+<!-- # -->(7000 RESERVED)
+<!-- # -->
+<!-- # -->
+<!-- # -->
+<!-- # -->80[00]-Endpoints
+<!-- # -->	8080-Plug
+<!-- # -->		RJ45
+<!-- # -->		misc
+<!-- # -->	8081-Jack
+<!-- # -->		RJ45
+<!-- # -->		misc
+<!-- # -->	8082-RESERVED (do NOT use)
+<!-- # -->	8083-RESERVED (do NOT use)
+<!-- # -->
+<!-- # -->85[00]-Dissipator
+<!-- # -->	8580-Fans
+<!-- # -->	8581-Pump
+<!-- # -->	8582-Heatsink
+<!-- # -->	8585-Radiator
+<!-- # -->
+<!-- # -->9000-Miscellaneous
+<!-- # -->	9090z-Screws/Bolts
+<!-- # -->	9095-frequent (most frequently used)
+<!-- # -->	9099-Misc
+<!-- # -->		zMisc (unsortred, typically uniquely needed by specific CAD model)
+<!-- # -->
+<!-- # -->9100-KEEPOUT (solid objects used to mark regions reserved for future use)
+<!-- # -->
+<!-- # -->94[00]
+<!-- # -->to
+<!-- # -->98[00]
+<!-- # -->	RESERVED for future use
+<!-- # -->
+<!-- # -->99[00]-import
+<!-- # -->	RESERVED for future use
+<!-- # --></pre>
+<!--
+fi
+ '_heading2' 'Functions'
+if false; then true; # -->
+<!-- # --><h2>Functions</h2>
+<!--
+fi
+ '_v' '"Please regard as a loose specification intended to offer unallocated regions for expansion and subordinate to any improvements that may be found in actual implementations.
+
+	_panel
+Files to be opened automatically by (one or more instances of) panel.
+
+	01-rapid
+000-004	- backend profiles (eg. SteamVR Universe Manager)
+005-009	- backend manager software (eg. processor clock/cooling management utility)
+010-104	- rapid startup scripts (eg. batch, shell)
+015-019	- GUI macro manager (eg. AutoHotKey, VoiceAttack)
+020-	- external control interfaces for specific variants (eg. JoystickGremlin HOTAS profile for FA18C)
+080-	- GUI reset (eg. rapid_reset, 'construct screen', 'VR Virtual Desktop')
+200-	- external communications software (eg. Discord, TeamSpeak)
+550-	- external navigation software (eg. DCS-Waypoint-Editor, Google Earth)
+590-	- external panel (VM or Computer with PanelBoard Installed)
+600-	- external telemetry or real-time diagnostics software (eg. EDMC, EDEngineer)
+690-	- multilayer display management (eg. OVRDrop, 'construct desk')
+798-	- external control feedback software for specific variants (eg. SimFFB for FA18C)
+799-	- external workaround software (including both daemons and manually launched as needed)
+800-	- start (tool, vehicle, application, etc)
+
+	02-alternate
+840-	- frontend profiles (eg. visual quality settings)
+888-	- modification managers (eg. JSGME)
+
+	05-maintenance
+_lib	- record keeping, miscellaneous files and programs, etc
+860-	- alternative program managers (eg. PiTool, Steam)
+880-	- Update/Repair
+889-889	- configuration managers (eg. Kneeboard Builder)
+
+	999-import
+... log files and such that may need to be obtained for external use
+... links to locations of files/directories that may need to be altered manually"'
+if false; then true; # -->
+<!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+<!-- # -->Please regard as a loose specification intended to offer unallocated regions for expansion and subordinate to any improvements that may be found in actual implementations.
+<!-- # -->
+<!-- # -->	_panel
+<!-- # -->Files to be opened automatically by (one or more instances of) panel.
+<!-- # -->
+<!-- # -->	01-rapid
+<!-- # -->000-004	- backend profiles (eg. SteamVR Universe Manager)
+<!-- # -->005-009	- backend manager software (eg. processor clock/cooling management utility)
+<!-- # -->010-104	- rapid startup scripts (eg. batch, shell)
+<!-- # -->015-019	- GUI macro manager (eg. AutoHotKey, VoiceAttack)
+<!-- # -->020-	- external control interfaces for specific variants (eg. JoystickGremlin HOTAS profile for FA18C)
+<!-- # -->080-	- GUI reset (eg. rapid_reset, 'construct screen', 'VR Virtual Desktop')
+<!-- # -->200-	- external communications software (eg. Discord, TeamSpeak)
+<!-- # -->550-	- external navigation software (eg. DCS-Waypoint-Editor, Google Earth)
+<!-- # -->590-	- external panel (VM or Computer with PanelBoard Installed)
+<!-- # -->600-	- external telemetry or real-time diagnostics software (eg. EDMC, EDEngineer)
+<!-- # -->690-	- multilayer display management (eg. OVRDrop, 'construct desk')
+<!-- # -->798-	- external control feedback software for specific variants (eg. SimFFB for FA18C)
+<!-- # -->799-	- external workaround software (including both daemons and manually launched as needed)
+<!-- # -->800-	- start (tool, vehicle, application, etc)
+<!-- # -->
+<!-- # -->	02-alternate
+<!-- # -->840-	- frontend profiles (eg. visual quality settings)
+<!-- # -->888-	- modification managers (eg. JSGME)
+<!-- # -->
+<!-- # -->	05-maintenance
+<!-- # -->_lib	- record keeping, miscellaneous files and programs, etc
+<!-- # -->860-	- alternative program managers (eg. PiTool, Steam)
+<!-- # -->880-	- Update/Repair
+<!-- # -->889-889	- configuration managers (eg. Kneeboard Builder)
+<!-- # -->
+<!-- # -->	999-import
+<!-- # -->... log files and such that may need to be obtained for external use
+<!-- # -->... links to locations of files/directories that may need to be altered manually
+<!-- # --></pre>
+<!--
+fi
+
+
+
 #__FOOTER_uk4uPhB663kVcygT0q_FOOTER__
 # NOTICE: DOCUMENT
 #y
@@ -361,3 +649,4 @@ exit 0
 __ATTACHMENT_uk4uPhB663kVcygT0q_ATTACHMENT__
 
 
+filename.html # scriptedIllustrator_markup_uk4uPhB663kVcygT0q --> </html>
