--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" type="image/png" href="favicon.ico"/>
 exit
 <script type=text/javascript> document.body.innerHTML = ''; </script>
 <!-- DANGER: WARNING: Do NOT edit, do NOT use as shell script. Concatenated. Although self-modifying features may be present, this entire file is NOT properly self-modifying. -->
