--- a/index.html
+++ b/index.html
@@ -589,29 +589,9 @@ Typically available between 10:00-22:00 EDT and often beyond.
 
 Please *do* text, leave voicemail, call multiple times, contact through multiple channels (eg. both IRC and Discord), repeatedly send multiple emails, etc. Due to persistent automation spam everywhere, such proof of cognition is helpful. For everyone already regularly contancting me, bringing my attention to any new persons or opportunities, is always very much appreciated also.
 
-If communications are somehow saturated, or many opportunities arise, priority will go to people who can help make progress on the &#39;roadmap and timeline&#39; under the &#39;UniversalTechnologySpecificationTextbook&#39; (&#39;uTST&#39;) .
+If communications are somehow saturated, or many opportunities arise, priority will go to people who can help make progress on the &#39;roadmap and timeline&#39; under the &#39;universalTechnologySpecificationTextbook&#39; (&#39;uTST&#39;) .
 
 More information (eg. unpublished email addresses) available on request.
-<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
-'
- '_heading2' 'Direction'
-if false; then true; # -->
-<!-- # --><h2>Direction</h2>
-<!--
-fi
-_t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Helpful individuals or organizations are invited to participate.
-
-
-Winners at the game of life bring the fullest diversity and quality to more players.
-
-
-A transition from no wealth (ie. biological competence, what animals are born with), through wealth living on us (ie. creating technological tools), to us living on and once again independent of wealth (ie. technological competence, everyone born with the benefits of &#39;self-driving AI&#39;). 
-
-Eventually, while we still can before this universe ends in chaos, we must mostly fill that universe with unfettered opportunity. Eventually, we must be allowed uninterrupted, immersive, unlobotomized lives of our choosing with no limits whatsoever on our own forms, associations, experiences, cravings, desires, virtual reality, or neural interfaces.
-
-
-My goal was and will long remain the widest possible empowerment - the expedient transition from no wealth, through living on wealth, to the unlimited wealth of self-driving AI for all to experience whatever life however they may wish.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading2' 'Diversity, Equity, Inclusiveness (DEI)'
@@ -627,15 +607,34 @@ For equity, continue to unequivocally oppose and reverse any bias whenever credi
 For inclusiveness, press for the realization that people with different interests and backgrounds are actually uniquely valuable and can in fact coexist in the same world and universe.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Sometimes I, &#39;mirage335&#39;, have had the disappointment of witnessing and hearing of seriously intentional biased derogatory remarks, explicitly stated unwelcome harassment, imposition of limits, insinuation that non-conflicting private inclinations are public conflicts of interest. An individual&#39;s potential, contributions, and experience of life, is wholly distinct from any other attribute, group, behavior. Any bias otherwise only causes harm, is irrational as such, and discourages productive individuals who will notice.
+
+Discovering such discouragement is difficult enough, tolerating such discouragement has no rational excuse.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
  '_page' ' '
 if false; then true; # -->
 <!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
 <!--
 fi
+ '_heading2' 'Direction'
+if false; then true; # -->
+<!-- # --><h2>Direction</h2>
+<!--
+fi
 _t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Sometimes I, &#39;mirage335&#39;, have had the disappointment of witnessing and hearing of seriously intentional biased derogatory remarks, explicitly stated unwelcome harassment, imposition of limits, insinuation that non-conflicting private inclinations are public conflicts of interest. An individual&#39;s potential, contributions, and experience of life, is wholly distinct from any other attribute, group, behavior. Any bias otherwise only causes harm, is irrational as such, and discourages productive individuals who will notice.
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Helpful individuals or organizations are invited to participate.
 
-Discovering such discouragement is difficult enough, tolerating such discouragement has no rational excuse.
+Winners at the game of life bring the fullest diversity and quality to more players.
+
+
+A transition from no wealth (ie. biological competence, what animals are born with), through wealth living on us (ie. creating technological tools), to us living on and once again independent of wealth (ie. technological competence, everyone born with the benefits of &#39;self-driving AI&#39;).
+
+Eventually, while we still can before this universe ends in chaos, we must mostly fill that universe with unfettered opportunity. Eventually, we must be allowed uninterrupted, immersive, unlobotomized lives of our choosing with no limits whatsoever on our own forms, associations, experiences, cravings, desires, virtual reality, or neural interfaces.
+
+
+My goal was and will long remain the widest possible empowerment - the expedient transition from no wealth, through living on wealth, to the unlimited wealth of self-driving AI for all to experience whatever life however they may wish.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading2' 'Strengths'
@@ -647,9 +646,7 @@ _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">*) Robust containment of complete hardware and software design toolchains with interprocess-communication within single filesystem directories.
 
 *) Legacy multiplatform (ie. MSW), cloud, virtualization, and LiveCD/LiveUSB compatibility.
-
-*) Strategic planning, technical point-of-diminishing returns due diligence.
-
+*) Strategic planning, technical point-of-diminishing-returns due diligence.
 *) Extensively self-taught, accustomed to efficiently exploring uncharted territory.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
@@ -670,6 +667,7 @@ http://www.hacdc.org/
 
 Official contact for SUPPLIES and EXPANSION funds.
 Network infrastructure for St.Stephens Church and tenants. Shell/VPS servers for HacDC members.
+Represented both Makersmiths and HacDC at the "Nation of Makers" gathering.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading3' 'Imagnus Medical - Director of Engineering'
