Soaring Industries logo. Untracked files.

--- a/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting.html
+++ b/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting.html
@@ -319,6 +319,11 @@ IT infrastructure management.
 CNC machinery design, maintenance, improvement.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+ '_picture' '../../../../zzLib_895-reference/emblems/SOAR_logo.svg.png' '5%'
+if false; then true; # -->
+<!-- # --><img width="5%" src="../../../../zzLib_895-reference/emblems/SOAR_logo.svg.png" style="float: right;margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
  '_heading3' 'Soaring Industries LLC'
 if false; then true; # -->
 <!-- # --><h3>Soaring Industries LLC</h3>
