--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">My strong interest is in deploying a self-expanding VR environment throughout uninhabited galaxies and most of the Milky Way, so we can all get the most out of life. Already on the frontier of working and living in VR, with >2k hours in headsets and among the first people in the world to get a prototype Pimax Vision 8kX headset. Have designed much hardware and software emphasizing complete &#39;out-of-the-box&#39; FLOSS toolchains, and more is always underway. Also have a long track record of non-profit volunteer service, particularly with HacDC, The Capital Hackerspace.
 
 Name is Matthew "mirage335" Hines, also findable as "m335" (Discord servers, etc) and "AB3PI" (Amateur Radio).
+
+http://mirage335.member.hacdc.org
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_image' 'zzLib_895-reference/demo/TazStiff_owner.jpg'
@@ -613,11 +615,23 @@ scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-to
 Discovering such discouragement is difficult enough, tolerating such discouragement has no rational excuse.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+
+
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
  '_page' ' '
 if false; then true; # -->
 <!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
 <!--
 fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Lawful PvP. Straggler criminal CMDRs from Eravate harassing newer players elsewhere in Elite Dangerous were hunted down after Eravate had cleared and Eravate Defense Network (EDN) ships had mostly withdrawn. Much thanks to &#39;Arguendo&#39; for his &#39;IRL&#39; air battle management skills coordinating EDN.
+Here, I &#39;m335&#39; with three other friendly CMDRs, in an Imperial Courier outfitted for speed, interdiction, shield cell cancellation (ie. mosquito wing), continued the hunt to another well justified PvP kill.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
  '_image' 'zzLib_895-reference/demo/_misc/capture.jpg' '98%'
 if false; then true; # -->
 <!-- # --><img width="98%" src="zzLib_895-reference/demo/_misc/capture.jpg" style="margin: 0 0 0 15px;border: 5px solid transparent;">
@@ -677,6 +691,7 @@ Aug2016 - Present
 https://www.nationofmakers.us/
 https://makezine.com/2016/08/31/makerspace-organizers-convene-at-the-white-house/
 
+Represented both Makersmiths (as member) and HacDC (as BoD) at the "Nation of Makers" gathering, and remain in contact with the people at that gathering.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading3' 'HacDC - Former Director at Large, Former Vice President and Director of IT, Admin Team, Contributing Member'
@@ -740,9 +755,9 @@ if false; then true; # -->
 <!-- # --><img width="5%" src="zzLib_895-reference/emblems/SOAR_logo.svg.png" style="float: right;margin: 0 0 0 15px;border: 5px solid transparent;">
 <!--
 fi
- '_heading3' 'Soaring Industries LLC'
+ '_heading3' 'Soaring Industries LLC - Owner, Sole Proprietor, CEO'
 if false; then true; # -->
-<!-- # --><h3>Soaring Industries LLC</h3>
+<!-- # --><h3>Soaring Industries LLC - Owner, Sole Proprietor, CEO</h3>
 <!--
 fi
 _t '
@@ -751,10 +766,11 @@ Mar2016 - Present
 soaringindustries.space
 Self-owned technology business. Especially offers expertise in deploying own open-source technology, bringing emerging advantages in scalability and profitability, while field testing to reduce distractions from production and design.
 PatchRap and CoreAutoSSH are notable successes of Soaring Industries LLC.
-
-Owner, Sole Proprietor, CEO
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+ '_' '_heading3' 'Director - Self'
+ '_' '_t' 'Aug2010 - Present
+Self-taught and self-directed, particularly keen to develop open-source fabrication and communication technologies for public benefit.'
  '_page' ' '
 if false; then true; # -->
 <!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
@@ -818,7 +834,7 @@ Cryptography
 
 	Signal Processing, statistical confidence testing, psychometrics.
 Filter Design
-Infinite Impuse Response
+Infinite Impulse Response
 Statistics
 Correlation
 Confidence Testing
@@ -859,6 +875,7 @@ if false; then true; # -->
 fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Mar2015
 Class (at HacDC) began with Dan Barlow&#39;s outstanding theoretical introduction, which covered mounting hardware, cutting speeds, machine subsystems, and much more. Subsequently provided practical, hands-on individual instruction. Participants were independently able to attach appropriate mounting hardware, clamp workpieces, generate g-code using JSCut, and actually mill their designs.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
@@ -869,40 +886,45 @@ if false; then true; # -->
 fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+May2013
 Participants (at HacDC) were guided to create complex printable 3D models in under 20 minutes. Focus was on the fundamental geometric CAD workflow: sketching, constraining, extruding, face sketching, and assembling. After this tutorial, in-service part designs were demonstrated.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_heading3' 'KVIrc Weak Encryption'
+ '_heading3' 'KVIrc Weak Encryption (Bug Report)'
 if false; then true; # -->
-<!-- # --><h3>KVIrc Weak Encryption</h3>
+<!-- # --><h3>KVIrc Weak Encryption (Bug Report)</h3>
 <!--
 fi
 _t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Tested and found KVIrc encryption to use only ECB mode, which outputs identical ciphertext for identical inputs and keys. Filed bug report, and contacted developer CtrlAltCa via IRC. Proper CBC mode encryption became available and documented for KVIrc as a result. Encrypting an image in ECB mode, as Wikipedia demonstrates, dramatically reveals this is an incorrect way to use otherwise secure ciphers.
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Jul2011
+Tested and found KVIrc encryption to use only ECB mode, which outputs identical ciphertext for identical inputs and keys. Filed bug report, and contacted developer CtrlAltCa via IRC. Proper CBC mode encryption became available and documented for KVIrc as a result. Encrypting an image in ECB mode, as Wikipedia demonstrates, dramatically reveals this is an incorrect way to use otherwise secure ciphers.
 
 http://en.wikipedia.org/wiki/Block_cipher_modes_of_operation
 https://svn.kvirc.de/kvirc/ticket/1169
 http://en.wikipedia.org/wiki/File:Tux_ecb.jpg
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_heading3' 'Linux Kernel Tracer Bug'
+ '_heading3' 'Linux Kernel Tracer Bug (Software Testing)'
 if false; then true; # -->
-<!-- # --><h3>Linux Kernel Tracer Bug</h3>
+<!-- # --><h3>Linux Kernel Tracer Bug (Software Testing)</h3>
 <!--
 fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Apr2012
 Reported and assisted diagnosis for a Linux kernel bug affecting kernel latency (ie. desktop interactivity). Bug fix was subsequently committed to mainline Linux kernel.
 See commit db4c75cbebd7e5910cd3bcb6790272fcc3042857 at http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.3.5.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_heading3' 'Web2Project'
+ '_heading3' 'Web2Project (Feature and Bugfix)'
 if false; then true; # -->
-<!-- # --><h3>Web2Project</h3>
+<!-- # --><h3>Web2Project (Feature and Bugfix)</h3>
 <!--
 fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Mar2015
 Added URL-based autofill functionality.
 	https://github.com/web2project/web2project/pull/284
 
@@ -910,13 +932,14 @@ Corrected Calendar URL feed link generator logic. Commit merged into mainline.
 	https://github.com/web2project/web2project/pull/284
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_heading3' 'DAViCal'
+ '_heading3' 'DAViCal (Bugfix)'
 if false; then true; # -->
-<!-- # --><h3>DAViCal</h3>
+<!-- # --><h3>DAViCal (Bugfix)</h3>
 <!--
 fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Mar2015
 Minor bugfix regarding BIND request (external subscription) support. See dmfs.org for a description of this functionality.
 	https://github.com/mirage335/davical/commit/60895b6aef8cfea6a2b2f29653d33f98c35e7bba
 	http://dmfs.org/wiki/index.php?title=DAViCal
@@ -1590,6 +1613,8 @@ _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 Oct2013-Present
 Air-core toroid, extremely high performance DC-HF preselection filter for extremely high dynamic range upconverting superheterodyne radios. Functional, tested, and using robust 3D printed electrical components of own manufacture.
+
+https://github.com/mirage335/30MhzLowPass
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading3' '3D Printed Air-Core Toroid Inductors'
@@ -1599,12 +1624,15 @@ if false; then true; # -->
 fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Oct2013-Present
 Air-core toroid inductors improve electromagnetic interference (EMI), unwanted magnetic coupling, and high-frequency performance. Counter-winding channel eliminates the &#39;one-turn-loop&#39; effect, confining the magnetic field entirely within the toroid and attenuating coupling between stacked toroids to better than -20dB (100x). Whereas air-core stacked planar or solenoid conductors would have nearly 0dB (1x) coupling. Now, plastic formers printed for air-core toroids offer these benefits cheaply on demand.
+
+https://www.thingiverse.com/thing:870592
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_heading3' 'Antenna'
+ '_heading3' 'HacDC HF Antenna'
 if false; then true; # -->
-<!-- # --><h3>Antenna</h3>
+<!-- # --><h3>HacDC HF Antenna</h3>
 <!--
 fi
 _t '
