--- a/README_presentation.html
+++ b/README_presentation.html
@@ -1,3 +1,4 @@
+# <html style="size: letter;"><br \><script type="text/javascript"> document.body.innerHTML = ''; </script> <!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 #!/usr/bin/env bash
 
 # Dependencies.
@@ -55,56 +56,153 @@ _document_main() {
 #b
 # NOTICE: DOCUMENT
 #__HEADER_uk4uPhB663kVcygT0q_HEADER__
-_t 'Copyright (C) 2021,2022- mirage335
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Copyright (C) 2021,2022- mirage335
 See the end of the file for license conditions.
 See license.txt for mirage335_author license conditions.
 
 
-A program able to call other programs and extensively self-test. Compatible nominally with at least typical Unix-similar and MSW distributions.'
-_t '
-
-
+A program able to call other programs and extensively self-test. Compatible nominally with at least typical Unix-similar and MSW distributions.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
-_heading1 'Reading'
-_ ' ' # TODO: Images from_uTST . Frames of other HTML.
-_image 'zzLib_895-reference/from_uTST/neuralBits-zEXCERPTED-diagram-picture.png' '40%'
-_image 'zzLib_895-reference/from_uTST/sleeveDive-extraction.png' '60%'
-_picture 'zzLib_895-reference/from_uTST/problemSolversGuide-amplifier-commonEmitter.png' '20%'
-_image 'zzLib_895-reference/from_uTST/lithoDive-flatTool.png' '80%'
-_image 'zzLib_895-reference/from_uTST/cognitionSplicer-topographicMapping.png' '80%'
-_r '<iframe src="./index.html" width=95% height=720></iframe>'
 _t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 
 
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
-_heading1 'Usage'
-_o _messagePlain_probe './_consolidate_documents.bat'
-_t '
-Some larger binary replacement documents (ie. some PDF files) may be written to &#39;_bundle/&#39; to avoid unintentionally adding large binary object output to git history. Move these files to the root of the repository when appropriate.'
-_page
-_heading1 'Design'
-_t ' '
-_t '
-
-
+ '_heading1' 'Reading'
+if false; then true; # -->
+<!-- # --><h1>Reading</h1>
+<!--
+fi
+ '_' ' '
+ '_image' 'zzLib_895-reference/from_uTST/neuralBits-zEXCERPTED-diagram-picture.png' '40%'
+if false; then true; # -->
+<!-- # --><img width="40%" src="zzLib_895-reference/from_uTST/neuralBits-zEXCERPTED-diagram-picture.png" style="margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
+ '_image' 'zzLib_895-reference/from_uTST/sleeveDive-extraction.png' '60%'
+if false; then true; # -->
+<!-- # --><img width="60%" src="zzLib_895-reference/from_uTST/sleeveDive-extraction.png" style="margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
+ '_picture' 'zzLib_895-reference/from_uTST/problemSolversGuide-amplifier-commonEmitter.png' '20%'
+if false; then true; # -->
+<!-- # --><img width="20%" src="zzLib_895-reference/from_uTST/problemSolversGuide-amplifier-commonEmitter.png" style="float: right;margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
+ '_image' 'zzLib_895-reference/from_uTST/lithoDive-flatTool.png' '80%'
+if false; then true; # -->
+<!-- # --><img width="80%" src="zzLib_895-reference/from_uTST/lithoDive-flatTool.png" style="margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
+ '_image' 'zzLib_895-reference/from_uTST/cognitionSplicer-topographicMapping.png' '80%'
+if false; then true; # -->
+<!-- # --><img width="80%" src="zzLib_895-reference/from_uTST/cognitionSplicer-topographicMapping.png" style="margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
+_r '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q -->
+<iframe src="./index.html" width=95% height=720></iframe>
+<!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
-_page
-_heading1 'Safety'
-_t ' '
 _t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 
 
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
-_page
-_heading1 'Reference'
-_t ' '
+ '_heading1' 'Usage'
+if false; then true; # -->
+<!-- # --><h1>Usage</h1>
+<!--
+fi
+ '_o' '_messagePlain_probe' './_consolidate_documents.bat'
+if false; then true; # -->
+<!-- # --><pre style="-webkit-print-color-adjust: exact;background-color:#848484;margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+<!-- # --><span style="color:#1818b2;background-color:#848484;"> ./_consolidate_documents.bat</span>
+<!-- # --></pre>
+<!--
+fi
 _t '
-
-
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Some larger binary replacement documents (ie. some PDF files) may be written to &#39;_bundle/&#39; to avoid unintentionally adding large binary object output to git history. Move these files to the root of the repository when appropriate.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
-_page
-_heading1 'Copyright'
+ '_page'
+if false; then true; # -->
+<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
+<!--
+fi
+ '_heading1' 'Design'
+if false; then true; # -->
+<!-- # --><h1>Design</h1>
+<!--
+fi
 _t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;"> 
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+
+
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+ '_page'
+if false; then true; # -->
+<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
+<!--
+fi
+ '_heading1' 'Safety'
+if false; then true; # -->
+<!-- # --><h1>Safety</h1>
+<!--
+fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;"> 
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+
+
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+ '_page'
+if false; then true; # -->
+<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
+<!--
+fi
+ '_heading1' 'Reference'
+if false; then true; # -->
+<!-- # --><h1>Reference</h1>
+<!--
+fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;"> 
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+
+
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+ '_page'
+if false; then true; # -->
+<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
+<!--
+fi
+ '_heading1' 'Copyright'
+if false; then true; # -->
+<!-- # --><h1>Copyright</h1>
+<!--
+fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 This file is part of mirage335_author.
 
 mirage335_author is free software: you can redistribute it and/or modify
@@ -119,11 +217,17 @@ GNU Affero General Public License for more details.
 
 You should have received a copy of the GNU Affero General Public License
 along with mirage335_author.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
 _t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 
 
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+
+
+
 #__FOOTER_uk4uPhB663kVcygT0q_FOOTER__
 # NOTICE: DOCUMENT
 #y
@@ -327,3 +431,4 @@ exit 0
 __ATTACHMENT_uk4uPhB663kVcygT0q_ATTACHMENT__
 
 
+filename.html # scriptedIllustrator_markup_uk4uPhB663kVcygT0q --> </html>
